src/objects/RT_Case_Information__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>DeveloperName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>RT_Case Information</label>
</CustomObject>